--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "date-fns": "^2.25.0",
     "react": "^17.0.2",
+    "react-big-calendar": "^0.36.1",
+    "react-datepicker": "^4.2.1",
     "react-dom": "^17.0.2",
+    "react-modern-calendar-datepicker": "^3.1.6",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
